refactored and cleaned up Networking