@@ -1,26 +1,19 @@
 package io.fabricatedatelier.mayor.util;
 
-import java.util.*;
-
-import net.minecraft.block.Block;
-import net.minecraft.item.ItemStack;
-import net.minecraft.registry.RegistryEntryLookup;
-import net.minecraft.util.math.Direction;
-import org.jetbrains.annotations.Nullable;
-
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-
 import io.fabricatedatelier.mayor.Mayor;
 import io.fabricatedatelier.mayor.access.MayorManagerAccess;
 import io.fabricatedatelier.mayor.mixin.access.StructureTemplateAccess;
 import io.fabricatedatelier.mayor.network.packet.StructurePacket;
-import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
+import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.command.argument.BlockArgumentParser;
 import net.minecraft.entity.Entity;
+import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtHelper;
+import net.minecraft.registry.RegistryEntryLookup;
 import net.minecraft.registry.RegistryKeys;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
@@ -33,17 +26,20 @@ import net.minecraft.util.Identifier;
 import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.util.hit.HitResult;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.Direction;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.*;
 
 public class StructureHelper {
 
     public static Optional<StructureTemplate> getStructureTemplate(ServerWorld serverWorld, Identifier identifier) {
         StructureTemplateManager structureTemplateManager = serverWorld.getStructureTemplateManager();
-        Optional<StructureTemplate> structure = structureTemplateManager.getTemplate(identifier);
-        return structure;
+        return structureTemplateManager.getTemplate(identifier);
     }
 
     public static Map<BlockPos, NbtCompound> getBlockMap(ServerWorld serverWorld, Identifier structureId, BlockRotation structureRotation, boolean center) {
-        Map<BlockPos, NbtCompound> blockMap = new HashMap<BlockPos, NbtCompound>();
+        Map<BlockPos, NbtCompound> blockMap = new HashMap<>();
         Optional<StructureTemplate> optional = StructureHelper.getStructureTemplate(serverWorld, structureId);
         if (optional.isPresent() && optional.get() instanceof StructureTemplateAccess structureTemplateAccess) {
             int centerX = 0;
@@ -55,14 +51,14 @@ public class StructureHelper {
 
                 System.out.println(centerX + " : " + centerZ + " : " + optional.get().getSize());
             }
-            for (int i = 0; i < structureTemplateAccess.getBlockInfoLists().get(0).getAll().size(); i++) {
-                StructureBlockInfo structureBlockInfo = structureTemplateAccess.getBlockInfoLists().get(0).getAll().get(i);
+            for (int i = 0; i < structureTemplateAccess.getBlockInfoLists().getFirst().getAll().size(); i++) {
+                StructureBlockInfo structureBlockInfo = structureTemplateAccess.getBlockInfoLists().getFirst().getAll().get(i);
                 if (structureBlockInfo.state().isAir()) {
                     // maybe sync air too?
                     continue;
                 }
                 BlockState blockState = structureBlockInfo.state().rotate(structureRotation);
-                if (structureBlockInfo.state().isOf(Blocks.JIGSAW)) {
+                if (structureBlockInfo.state().isOf(Blocks.JIGSAW) && structureBlockInfo.nbt() != null) {
                     String string = structureBlockInfo.nbt().getString("final_state");
                     try {
                         blockState = BlockArgumentParser.block(serverWorld.createCommandRegistryWrapper(RegistryKeys.BLOCK), string, true).blockState();
@@ -84,7 +80,7 @@ public class StructureHelper {
             MayorManager mayorManager = ((MayorManagerAccess) serverPlayerEntity).getMayorManager();
             mayorManager.setStructureId(structureId);
             mayorManager.setStructureRotation(structureRotation);
-            ServerPlayNetworking.send(serverPlayerEntity, new StructurePacket(structureId, blockMap, structureRotation));
+            new StructurePacket(structureId, blockMap, structureRotation).sendPacket(serverPlayerEntity);
             return true;
         }
         return false;
@@ -102,72 +98,68 @@ public class StructureHelper {
 
     public static BlockRotation getStructureRotation(int structureRotation) {
         return switch (structureRotation) {
-        case 0 -> BlockRotation.NONE;
-        case 1 -> BlockRotation.CLOCKWISE_90;
-        case 2 -> BlockRotation.CLOCKWISE_180;
-        case 3 -> BlockRotation.COUNTERCLOCKWISE_90;
-        default -> BlockRotation.NONE;
+            case 1 -> BlockRotation.CLOCKWISE_90;
+            case 2 -> BlockRotation.CLOCKWISE_180;
+            case 3 -> BlockRotation.COUNTERCLOCKWISE_90;
+            default -> BlockRotation.NONE;
         };
     }
 
     public static BlockRotation getRotatedStructureRotation(BlockRotation structureRotation, boolean rotateLeft) {
         return switch (structureRotation) {
-        case BlockRotation.NONE -> rotateLeft ? BlockRotation.COUNTERCLOCKWISE_90 : BlockRotation.CLOCKWISE_90;
-        case BlockRotation.CLOCKWISE_90 -> rotateLeft ? BlockRotation.NONE : BlockRotation.CLOCKWISE_180;
-        case BlockRotation.CLOCKWISE_180 -> rotateLeft ? BlockRotation.CLOCKWISE_90 : BlockRotation.COUNTERCLOCKWISE_90;
-        case BlockRotation.COUNTERCLOCKWISE_90 -> rotateLeft ? BlockRotation.CLOCKWISE_180 : BlockRotation.NONE;
-        default -> BlockRotation.NONE;
+            case BlockRotation.NONE -> rotateLeft ? BlockRotation.COUNTERCLOCKWISE_90 : BlockRotation.CLOCKWISE_90;
+            case BlockRotation.CLOCKWISE_90 -> rotateLeft ? BlockRotation.NONE : BlockRotation.CLOCKWISE_180;
+            case BlockRotation.CLOCKWISE_180 ->
+                    rotateLeft ? BlockRotation.CLOCKWISE_90 : BlockRotation.COUNTERCLOCKWISE_90;
+            case BlockRotation.COUNTERCLOCKWISE_90 -> rotateLeft ? BlockRotation.CLOCKWISE_180 : BlockRotation.NONE;
+            default -> BlockRotation.NONE;
         };
     }
 
     public static BlockPos moveOrigin(BlockPos origin, int keyCode, Direction viewDirection) {
         return switch (viewDirection.getHorizontal()) {
-        case 0 -> switch (keyCode) {
-        case 0 -> origin.west();
-        case 1 -> origin.east();
-        case 2 -> origin.north();
-        case 3 -> origin.south();
-        default -> origin;
-        };
-        case 1 -> switch (keyCode) {
-        case 0 -> origin.north();
-        case 1 -> origin.south();
-        case 2 -> origin.east();
-        case 3 -> origin.west();
-        default -> origin;
-        };
-        case 2 -> switch (keyCode) {
-        case 0 -> origin.east();
-        case 1 -> origin.west();
-        case 2 -> origin.south();
-        case 3 -> origin.north();
-        default -> origin;
-        };
-        case 3 -> switch (keyCode) {
-        case 0 -> origin.south();
-        case 1 -> origin.north();
-        case 2 -> origin.west();
-        case 3 -> origin.east();
-        default -> origin;
-        };
-        default -> origin;
+            case 0 -> switch (keyCode) {
+                case 0 -> origin.west();
+                case 1 -> origin.east();
+                case 2 -> origin.north();
+                case 3 -> origin.south();
+                default -> origin;
+            };
+            case 1 -> switch (keyCode) {
+                case 0 -> origin.north();
+                case 1 -> origin.south();
+                case 2 -> origin.east();
+                case 3 -> origin.west();
+                default -> origin;
+            };
+            case 2 -> switch (keyCode) {
+                case 0 -> origin.east();
+                case 1 -> origin.west();
+                case 2 -> origin.south();
+                case 3 -> origin.north();
+                default -> origin;
+            };
+            case 3 -> switch (keyCode) {
+                case 0 -> origin.south();
+                case 1 -> origin.north();
+                case 2 -> origin.west();
+                case 3 -> origin.east();
+                default -> origin;
+            };
+            default -> origin;
         };
     }
 
     public static List<ItemStack> getStructureItemRequirements(ServerWorld serverWorld, Identifier structureId) {
-        List<ItemStack> requiredItemStacks = new ArrayList<ItemStack>();
+        List<ItemStack> requiredItemStacks = new ArrayList<>();
         Map<BlockPos, NbtCompound> blockMap = StructureHelper.getBlockMap(serverWorld, structureId, BlockRotation.NONE, false);
 
         RegistryEntryLookup<Block> blockLookup = serverWorld.createCommandRegistryWrapper(RegistryKeys.BLOCK);
 
-        Iterator<Map.Entry<BlockPos, NbtCompound>> iterator = blockMap.entrySet().iterator();
-        while (iterator.hasNext()) {
-            Map.Entry<BlockPos, NbtCompound> entry = iterator.next();
-
+        for (var entry : blockMap.entrySet()) {
             ItemStack itemStack = new ItemStack(NbtHelper.toBlockState(blockLookup, entry.getValue()).getBlock().asItem());
-            if (requiredItemStacks.size() <= 0) {
-                requiredItemStacks.add(itemStack);
-            } else {
+            if (requiredItemStacks.isEmpty()) requiredItemStacks.add(itemStack);
+            else {
                 for (int i = 0; i < requiredItemStacks.size(); i++) {
                     if (requiredItemStacks.get(i).isOf(itemStack.getItem())) {
                         if (requiredItemStacks.get(i).getCount() >= requiredItemStacks.get(i).getMaxCount()) {
